[gd_scene load_steps=6 format=3 uid="uid://brukjjtmdw02e"]

[ext_resource type="Script" path="res://coop/tictactoe/tictactoe.gd" id="1_lv6n3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tj1m7"]
bg_color = Color(0.68975, 0.571446, 0.51955, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mj5r4"]
bg_color = Color(0.410076, 0, 0.169679, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hc35u"]
bg_color = Color(0.992062, 0.00081187, 0.992056, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7km8o"]
bg_color = Color(0, 0.313726, 0.6, 1)

[node name="tictactoe" type="Node2D"]
script = ExtResource("1_lv6n3")

[node name="map" type="Node2D" parent="."]

[node name="Panel" type="Panel" parent="map"]
offset_left = 304.0
offset_top = 48.0
offset_right = 848.0
offset_bottom = 592.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tj1m7")

[node name="Button0_0" type="Button" parent="map"]
offset_left = 320.0
offset_top = 63.0
offset_right = 480.0
offset_bottom = 224.0

[node name="Button0_1" type="Button" parent="map"]
offset_left = 496.0
offset_top = 63.0
offset_right = 657.0
offset_bottom = 224.0

[node name="Button0_2" type="Button" parent="map"]
offset_left = 671.0
offset_top = 64.0
offset_right = 832.0
offset_bottom = 225.0

[node name="Button1_0" type="Button" parent="map"]
offset_left = 319.0
offset_top = 240.0
offset_right = 479.0
offset_bottom = 401.0

[node name="Button1_1" type="Button" parent="map"]
offset_left = 495.0
offset_top = 240.0
offset_right = 656.0
offset_bottom = 401.0

[node name="Button1_2" type="Button" parent="map"]
offset_left = 671.0
offset_top = 240.0
offset_right = 832.0
offset_bottom = 401.0

[node name="Button1_3" type="Button" parent="map"]
offset_left = 320.0
offset_top = 414.0
offset_right = 480.0
offset_bottom = 575.0

[node name="Button1_4" type="Button" parent="map"]
offset_left = 496.0
offset_top = 414.0
offset_right = 657.0
offset_bottom = 575.0

[node name="Button1_5" type="Button" parent="map"]
offset_left = 672.0
offset_top = 414.0
offset_right = 833.0
offset_bottom = 575.0

[node name="scoreandturns" type="Node2D" parent="."]

[node name="Panel" type="Panel" parent="scoreandturns"]
offset_left = 856.0
offset_right = 1151.0
offset_bottom = 647.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mj5r4")

[node name="Panel2" type="Panel" parent="scoreandturns"]
offset_left = 2.0
offset_right = 297.0
offset_bottom = 647.0

[node name="Node2D" type="Node2D" parent="."]

[node name="Panelkuklos" type="Panel" parent="Node2D"]
offset_left = 378.0
offset_top = 122.0
offset_right = 418.0
offset_bottom = 162.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hc35u")

[node name="PanelX" type="Panel" parent="Node2D"]
offset_left = 378.0
offset_top = 123.0
offset_right = 418.0
offset_bottom = 163.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7km8o")

[node name="Panelkuklos2" type="Panel" parent="Node2D"]
offset_left = 557.0
offset_top = 121.0
offset_right = 597.0
offset_bottom = 161.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hc35u")

[node name="PanelX2" type="Panel" parent="Node2D"]
offset_left = 557.0
offset_top = 122.0
offset_right = 597.0
offset_bottom = 162.0
theme_override_styles/panel = SubResource("StyleBoxFlat_7km8o")

[connection signal="pressed" from="map/Button0_0" to="." method="_on_button_0_0_pressed"]
[connection signal="pressed" from="map/Button0_1" to="." method="_on_button_0_1_pressed"]
[connection signal="pressed" from="map/Button0_2" to="." method="_on_button_0_2_pressed"]
[connection signal="pressed" from="map/Button1_0" to="." method="_on_button_1_0_pressed"]
